# autobot

./: .gitignore
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/auto_bot_gui/: auto_bot_gui
devel/lib/pkgconfig/: auto_bot_gui.pc  diff_drive.pc  gui_auto_bot.pc  stm_translator.pc  stm_transmit.pc
devel/lib/stm_translator/: stm_translator
src/chaffe_navigation/: mainpage.dox  manifest.xml
src/chaffe_navigation/launch/: gmapping.launch  move_base.launch
src/chaffe_navigation/no_use_param/: costmap_common_params.yaml
src/chaffe_navigation/params/: base_local_planner_param.yaml  costmap_common_params.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/diff_drive/: CMakeLists.txt  package.xml
src/diff_drive/config/: diff.yaml  view.rviz
src/diff_drive/launch/: transform.launch
src/diff_drive/src/: diff_tf.py  stm copy.py  stm.py  (+1 more)
src/gui_auto_bot/: CMakeLists.txt  arrow.cpp  arrow.h  auto_bot_gui  creatorinfo.h  executorwidget.cpp  executorwidget.h  executorwidget.ui  extendedscene.cpp  extendedscene.h  graphicsrobitem.cpp  graphicsrobitem.h  iteminputinfo.cpp  iteminputinfo.h  iteminputinfo.ui  jsonmodule.cpp  jsonmodule.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualremotecontroller.cpp  manualremotecontroller.h  manualremotecontroller.ui  messager.h  serialportdialog.cpp  serialportdialog.h  serialportdialog.ui
src/gui_auto_bot/launch/: start.launch
src/gui_auto_bot/res/: images.qrc
src/stm_translator/: CMakeLists.txt  package.xml  stm_translator
(+10 files in other folders)
